--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@prisma/cli": "2.11.0",
     "@prisma/client": "2.11.0",
     "blitz": "0.25.0",
+    "cypress": "5.6.0",
     "final-form": "4.20.1",
     "react": "0.0.0-experimental-7f28234f8",
     "react-dom": "0.0.0-experimental-7f28234f8",
